Translate opentracing.adoc.po

--- a/l10n/po/ja_JP/_guides/opentracing.adoc.po
+++ b/l10n/po/ja_JP/_guides/opentracing.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-11 02:12+0000\n"
-"PO-Revision-Date: 2021-02-06 15:18+0900\n"
+"PO-Revision-Date: 2021-03-13 12:37+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -209,25 +209,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:104
-#, fuzzy
 msgid "Notice that there is no tracing specific code included in the application. By default, requests sent to this endpoint will be traced without any code changes being required. It is also possible to enhance the tracing information. For more information on this, please see the https://github.com/eclipse/microprofile-opentracing/blob/master/spec/src/main/asciidoc/microprofile-opentracing.asciidoc[MicroProfile OpenTracing specification]."
-msgstr "アプリケーションにはトレースに特化したコードが含まれていないことに注意してください。デフォルトでは、このエンドポイントに送信されたリクエストは、コードの変更を必要とせずにトレースされます。また、トレース情報を強化することも可能です。これについての詳細は、 link:https://github.com/eclipse/microprofile-opentracing/blob/master/spec/src/main/asciidoc/microprofile-opentracing.asciidoc[MicroProfile OpenTracing 仕様を] 参照してください。"
+msgstr "アプリケーションにはトレースに特化したコードが含まれていないことに注意してください。デフォルトでは、このエンドポイントに送信されたリクエストは、コードの変更を必要とせずにトレースされます。また、トレース情報を強化することも可能です。これについての詳細は、 link:https://github.com/eclipse/microprofile-opentracing/blob/master/spec/src/main/asciidoc/microprofile-opentracing.asciidoc[MicroProfile OpenTracing 仕様] を参照してください。"
 
 #. type: Title ===
 #: upstream/_guides/opentracing.adoc:105
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Create the configuration"
-msgstr "設定を作成します。"
+msgstr "設定の作成"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:108
-#, fuzzy
 msgid "There are two ways to configure the Jaeger tracer within the application."
-msgstr "アプリケーション内でイェーガートレーサーを設定するには、2つの方法があります。"
+msgstr "アプリケーション内でJaeger トレーサーを設定するには、2つの方法があります。"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:110
-#, fuzzy
 msgid "The first approach is by providing the properties within the `src/main/resources/application.properties` file:"
 msgstr "最初のアプローチは、 `src/main/resources/application.properties` ファイル内でプロパティーを提供することです。"
 
@@ -243,31 +240,26 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:120
-#, fuzzy
 msgid "If the `quarkus.jaeger.service-name` property (or `JAEGER_SERVICE_NAME` environment variable) is not provided then a \"no-op\" tracer will be configured, resulting in no tracing data being reported to the backend."
 msgstr "`quarkus.jaeger.service-name` プロパティー (または `JAEGER_SERVICE_NAME` 環境変数) が提供されていない場合は、\"no-op\" トレーサーが設定され、結果としてトレースデータはバックエンドに報告されません。"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:121
-#, fuzzy
 msgid "Setup a sampler, that uses a constant sampling strategy."
-msgstr "一定のサンプリングストラテジーを使用するサンプラーを設定します。"
+msgstr "一定のサンプリング戦略を使用するサンプラーの設定"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:122
-#, fuzzy
 msgid "Sample all requests. Set sampler-param to somewhere between 0 and 1, e.g. 0.50, if you do not wish to sample all requests."
 msgstr "すべてのリクエストをサンプリングします。すべてのリクエストをサンプリングしたくない場合は、sampler-param を 0 から 1 の間のどこかに設定します (例: 0.50)。"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:123
-#, fuzzy
 msgid "Add trace IDs into log message."
 msgstr "ログメッセージにトレースIDを追加します。"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:125
-#, fuzzy
 msgid "The second approach is to supply the properties as https://www.jaegertracing.io/docs/latest/client-features/[environment variables]. These can be specified as `jvm.args` as shown in the following section."
 msgstr "2つ目の方法は、 link:https://www.jaegertracing.io/docs/latest/client-features/[環境変数] としてプロパティーを供給することです。これらは、次のセクションに示すように `jvm.args` として指定することができます。"
 
@@ -279,7 +271,6 @@ msgstr "アプリケーションの実行"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:129
-#, fuzzy
 msgid "The first step is to start the tracing system to collect and display the captured traces:"
 msgstr "まず、キャプチャしたトレースを収集して表示するためのトレースシステムを起動します。"
 
@@ -291,9 +282,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:136
-#, fuzzy
 msgid "Now we are ready to run our application. If using `application.properties` to configure the tracer:"
-msgstr "これでアプリケーションを実行する準備が整いました。トレーサーの設定に `application.properties` を使用している場合。"
+msgstr "これでアプリケーションを実行する準備が整いました。トレーサーの設定に `application.properties` を使用している場合:"
 
 #. type: delimited block -
 #: upstream/_guides/opentracing.adoc:140
@@ -303,9 +293,8 @@ msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:143
-#, fuzzy
 msgid "or if configuring the tracer via environment variables:"
-msgstr "または、環境変数でトレーサーを設定する場合。"
+msgstr "または、環境変数でトレーサーを設定する場合:"
 
 #. type: delimited block -
 #: upstream/_guides/opentracing.adoc:147
@@ -315,9 +304,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:150
-#, fuzzy
 msgid "Once both the application and tracing system are started, you can make a request to the provided endpoint:"
-msgstr "アプリケーションとトレースシステムの両方が起動したら、提供されたエンドポイントにリクエストを行うことができます。"
+msgstr "アプリケーションとトレースシステムの両方が起動したら、提供されたエンドポイントにリクエストを行うことができます:"
 
 #. type: delimited block -
 #: upstream/_guides/opentracing.adoc:155
@@ -329,9 +317,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:157
-#, fuzzy
 msgid "When the first request has been submitted, the Jaeger tracer within the app will be initialized:"
-msgstr "最初のリクエストが送信されると、アプリ内のJaegerトレーサーが初期化されます。"
+msgstr "最初のリクエストが送信されると、アプリ内のJaegerトレーサーが初期化されます:"
 
 #. type: delimited block -
 #: upstream/_guides/opentracing.adoc:162
@@ -343,7 +330,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:165
-#, fuzzy
 msgid "Then visit the http://localhost:16686[Jaeger UI] to see the tracing information."
 msgstr "その後、 link:http://localhost:16686[Jaeger UI] にアクセスしてトレース情報を確認します。"
 
@@ -354,25 +340,22 @@ msgstr "`CTRL+C`  を叩いてアプリケーションを停止させます。"
 
 #. type: Title ==
 #: upstream/_guides/opentracing.adoc:168
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Tracing additional methods"
 msgstr "追加メソッドのトレース"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:172
-#, fuzzy
 msgid "REST endpoints are automatically traced.  If you need to trace additional methods, you can use the `org.eclipse.microprofile.opentracing.Traced` annotation at class or method level."
-msgstr "REST エンドポイントは自動的にトレースされます。追加のメソッドをトレースする必要がある場合は、クラスやメソッドレベルで `org.eclipse.microprofile.opentracing.Traced` アノテーションを使用することができます。"
+msgstr "REST エンドポイントは自動的にトレースされます。追加でメソッドをトレースする必要がある場合は、クラスやメソッドレベルで `org.eclipse.microprofile.opentracing.Traced` アノテーションを使用することができます。"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:174
-#, fuzzy
 msgid "This can be useful to trace incoming requests from non-REST calls (like request coming from a message) or to create spans inside a trace."
 msgstr "これは、非RESTコール(メッセージからのリクエストなど)からの着信リクエストをトレースしたり、トレース内にスパンを作成したりするのに便利です。"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:176
-#, fuzzy
 msgid "Here is an example of a `FrancophoneService` which methods are traced."
 msgstr "ここでは、メソッドがトレースされている `FrancophoneService` の例を示します。"
 
@@ -409,39 +392,35 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:194
-#, fuzzy
 msgid "the best way to add OpenTracing capability to reactive messaging based applications is by adding the `Traced` annotation to all incoming methods."
-msgstr "リアクティブメッセージングベースのアプリケーションに OpenTracing 機能を追加する最良の方法は、すべての受信メソッドに `Traced` アノテーションを追加することです。"
+msgstr "Reactive Messagingベースのアプリケーションに OpenTracing 機能を追加する最善の方法は、すべての受信メソッドに `Traced` アノテーションを追加することです。"
 
 #. type: Title ==
 #: upstream/_guides/opentracing.adoc:195
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Additional instrumentation"
-msgstr "追加の計装"
+msgstr "追加の計器"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:198
-#, fuzzy
 msgid "The https://github.com/opentracing-contrib[OpenTracing API Contributions project] offers additional instrumentation that can be used to add tracing to a large variety of technologies/components."
-msgstr "link:https://github.com/opentracing-contrib[OpenTracing API Contributionsプロジェクト] では、様々な技術/コンポーネントにトレースを追加するために使用できる追加の計測器を提供しています。"
+msgstr "link:https://github.com/opentracing-contrib[OpenTracing API Contributionsプロジェクト] では、様々な技術/コンポーネントにトレースを追加するために使用できる追加の計器 (Instrumentation) を提供しています。"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:200
-#, fuzzy
 msgid "The instrumentation documented in this section has been tested with Quarkus and works in both standard and native mode."
-msgstr "このセクションで説明されているインストゥルメンテーションは、Quarkusでテストされており、標準モードとネイティブモードの両方で動作します。"
+msgstr "このセクションで説明されている計器は、Quarkusでテストされており、標準モードとネイティブモードの両方で動作します。"
 
 #. type: Title ===
 #: upstream/_guides/opentracing.adoc:201
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "JDBC"
-msgstr "ジェイディービーシー"
+msgstr "JDBC"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:204
-#, fuzzy
 msgid "The https://github.com/opentracing-contrib/java-jdbc[JDBC instrumentation] will add a span for each JDBC queries done by your application, to enable it, add the following dependency to your pom.xml:"
-msgstr "link:https://github.com/opentracing-contrib/java-jdbc[JDBCインストルメンテーションは] 、アプリケーションで実行されるJDBCクエリごとにスパンを追加するので、これを有効にするには、以下の依存関係をpom.xmlに追加します。"
+msgstr "link:https://github.com/opentracing-contrib/java-jdbc[JDBC計器]は 、アプリケーションで実行されるJDBCクエリごとにスパンを追加するので、これを有効にするには、以下の依存関係をpom.xmlに追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/opentracing.adoc:211
@@ -455,9 +434,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:214
-#, fuzzy
 msgid "As it uses a dedicated JDBC driver, you must configure your datasource and Hibernate to use it."
-msgstr "専用のJDBCドライバーを使用するため、データソースとHibernateを使用するように設定する必要があります。"
+msgstr "専用のJDBCドライバーを使用するため、データソースとHibernateがそれを使用するように設定する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/opentracing.adoc:224
@@ -474,15 +452,14 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/opentracing.adoc:227
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Kafka"
-msgstr "カフカ"
+msgstr "Kafka"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:230
-#, fuzzy
 msgid "The https://github.com/opentracing-contrib/java-kafka-client[Kafka instrumentation] will add a span for each message sent to or received from a Kafka topic. To enable it, add the following dependency to your pom.xml:"
-msgstr "link:https://github.com/opentracing-contrib/java-kafka-client[Kafka インスツルメンテーションは] 、Kafka トピックとの間で送受信されるメッセージごとにスパンを追加します。これを有効にするには、以下の依存関係を pom.xml に追加します。"
+msgstr "link:https://github.com/opentracing-contrib/java-kafka-client[Kafka 計器] は、Kafka トピックとの間で送受信されるメッセージごとにスパンを追加します。これを有効にするには、以下の依存関係を pom.xml に追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/opentracing.adoc:238
@@ -497,13 +474,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:241
-#, fuzzy
 msgid "It contains OpenTracing interceptors that must be registered on Kafka producers and consumers."
-msgstr "Kafkaの生産者と消費者に登録しなければならないOpenTracingのインターセプターが含まれています。"
+msgstr "KafkaのProducerとConsumerに登録しなければならないOpenTracingのインターセプターが含まれています。"
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:243
-#, fuzzy
 msgid "If you followed the link:kafka[Kafka guide], the interceptors can be added on the `generated-price` and the `prices` channels as follows:"
 msgstr "link:kafka[Kafkaのガイド] に従った場合、以下のように `generated-price` と `prices` のチャンネルにインターセプターを追加することができます。"
 
@@ -530,12 +505,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/opentracing.adoc:259
-#, fuzzy
 msgid "`interceptor.classes` accept a list of classes separated by a comma."
 msgstr "`interceptor.classes` はカンマで区切られたクラスのリストを受け付けます。"
 
 #. type: Title ==
 #: upstream/_guides/opentracing.adoc:261
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Jaeger Configuration Reference"
-msgstr "イェーガー構成リファレンス"
+msgstr "Jaeger構成リファレンス"
