Translate kubernetes-client.adoc.po

--- a/l10n/po/ja_JP/_guides/kubernetes-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/kubernetes-client.adoc.po
@@ -3,39 +3,38 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-03 16:17+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-13 12:30+0900\n"
+"Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/kubernetes-client.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Kubernetes Client"
 msgstr "Quarkus - Kubernetesクライアント"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:13
-#, fuzzy
 msgid "Quarkus includes the `kubernetes-client` extension which enables the use of the https://github.com/fabric8io/kubernetes-client[Fabric8 Kubernetes Client] in native mode while also making it easier to work with."
-msgstr "Quarkusには、 link:https://github.com/fabric8io/kubernetes-client[Fabric8 Kubernetesクライアントを] ネイティブモードで使用できるようにする `kubernetes-client` エクステンションが含まれています。"
+msgstr "Quarkusには、 link:https://github.com/fabric8io/kubernetes-client[Fabric8 Kubernetesクライアント] をネイティブモードで使用できるようにする `kubernetes-client` エクステンションが含まれています。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:18
-#, fuzzy
 msgid "Having a Kubernetes Client extension in Quarkus is very useful in order to unlock the power of Kubernetes Operators.  Kubernetes Operators are quickly emerging as a new class of Cloud Native applications.  These applications essentially watch the Kubernetes API and react to changes on various resources and can be used to manage the lifecycle of all kinds of complex systems like databases, messaging systems and much much more.  Being able to write such operators in Java with the very low footprint that native images provide is a great match."
-msgstr "Kubernetes Operatorsのパワーを引き出すためには、QuarkusにKubernetesクライアントエクステンションがあると非常に便利です。Kubernetes Operatorsは、クラウドネイティブアプリケーションの新しいクラスとして急速に台頭してきています。これらのアプリケーションは、基本的にKubernetes APIを監視し、様々なリソースの変更に反応し、データベースやメッセージングシステムなど、あらゆる種類の複雑なシステムのライフサイクルを管理するために使用することができます。ネイティブイメージが提供する非常に低いフットプリントで、このような演算子をJavaで書くことができるということは、非常にマッチしています。"
+msgstr "Kubernetes Operatorsのパワーを引き出すためには、QuarkusにKubernetesクライアントエクステンションがあると非常に便利です。Kubernetes Operatorsは、クラウドネイティブアプリケーションの新しいクラスとして急速に台頭してきています。これらのアプリケーションは、基本的にKubernetes APIを監視し、様々なリソースの変更に反応し、データベースやメッセージングシステムなど、あらゆる種類の複雑なシステムのライフサイクルを管理するために使用することができます。ネイティブイメージが提供する非常に低いフットプリントで、このようなOperatorをJavaで書くことができるということは、非常にマッチしています。"
 
 #. type: Title ==
 #: upstream/_guides/kubernetes-client.adoc:19
@@ -45,7 +44,6 @@ msgstr "設定"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:23
-#, fuzzy
 msgid "Once you have your Quarkus project configured you can add the `kubernetes-client` extension to your project by running the following command in your project base directory."
 msgstr "Quarkusプロジェクトを設定したら、プロジェクトのベースディレクトリーで次のコマンドを実行して、 `kubernetes-client` エクステンションをプロジェクトに追加できます。"
 
@@ -78,7 +76,6 @@ msgstr "使用方法"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:43
-#, fuzzy
 msgid "Quarkus configures a Bean of type `KubernetesClient` which can be injected into application code using the well known CDI methods.  This client can be configured using various properties as can be seen in the following example:"
 msgstr "Quarkusは、よく知られたCDIメソッドを使用してアプリケーションコードに注入できる `KubernetesClient` タイプのBeanを設定します。このクライアントは、以下の例にあるように、さまざまなプロパティーを使用して設定することができます。"
 
@@ -92,25 +89,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:51
-#, fuzzy
 msgid "Note that the full list of properties is available in the https://github.com/quarkusio/quarkus/blob/master/extensions/kubernetes-client/runtime-internal/src/main/java/io/quarkus/kubernetes/client/runtime/KubernetesClientBuildConfig.java[KubernetesClientBuildConfig] class."
-msgstr "プロパティーの完全なリストは、K link:https://github.com/quarkusio/quarkus/blob/master/extensions/kubernetes-client/runtime-internal/src/main/java/io/quarkus/kubernetes/client/runtime/KubernetesClientBuildConfig.java[ubernetesClientBuildConfig] クラスで確認できます。"
+msgstr "プロパティーの完全なリストは、 link:https://github.com/quarkusio/quarkus/blob/master/extensions/kubernetes-client/runtime-internal/src/main/java/io/quarkus/kubernetes/client/runtime/KubernetesClientBuildConfig.java[KubernetesClientBuildConfig] クラスで確認できます。"
 
 #. type: Title ===
 #: upstream/_guides/kubernetes-client.adoc:52
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Overriding"
 msgstr "オーバーライド"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:56
-#, fuzzy
 msgid "The extension also allows application code to override either of `io.fabric8.kubernetes.client.Config` or `io.fabric8.kubernetes.client.KubernetesClient` which are normally provided by the extension by simply declaring custom versions of those beans."
 msgstr "また、このエクステンションでは、アプリケーションコードは、単にそれらのBeanのカスタムバージョンを宣言することで、通常はエクステンションによって提供される `io.fabric8.kubernetes.client.Config` や `io.fabric8.kubernetes.client.KubernetesClient` のいずれかをオーバーライドすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:58
-#, fuzzy
 msgid "An example of this can be seen in the following snippet:"
 msgstr "この例は、次のスニペットに見ることができます。"
 
@@ -142,13 +136,11 @@ msgstr "テスト"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:77
-#, fuzzy
 msgid "To make testing against a mock Kubernetes API extremely simple, Quarkus provides the `WithKubernetesTestServer` annotation which automatically launches a mock of the Kubernetes API server and sets the proper environment variables needed so that the Kubernetes Client configures itself to use said mock.  Tests can inject the mock server and set it up in any way necessary for the particular testing using the `@KubernetesTestServer` annotation."
 msgstr "モックのKubernetes APIに対するテストを非常に簡単にするために、Quarkusでは、Kubernetes APIサーバーのモックを自動的に起動し、Kubernetesクライアントがそのモックを使用するように設定するために必要な適切な環境変数を設定する `KubernetesMockServerTestResource` を提供しています。テストは、 `@MockServer` アノテーションを使用して、特定のテストに必要な方法でモックを注入し、設定することができます。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:79
-#, fuzzy
 msgid "Let's assume we have a REST endpoint defined like so:"
 msgstr "このようにRESTエンドポイントが定義されているとします。"
 
@@ -189,7 +181,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:100
-#, fuzzy
 msgid "We could write a test for this endpoint very easily like so:"
 msgstr "このエンドポイントのテストはこんな感じで簡単に書けます。"
 
@@ -252,7 +243,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:133
-#, fuzzy
 msgid "Note that to take advantage of these features, the `quarkus-test-kubernetes-client` dependency needs to be added, for example like so:"
 msgstr "これらの機能を利用するには、例えば次のように `quarkus-test-kubernetes-client` 依存関係を追加する必要があることに注意してください。"
 
@@ -269,7 +259,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:144
-#, fuzzy
 msgid "Alternately, you can create a `CustomKubernetesMockServerTestResource.java` to ensure all your `@QuarkusTest` enabled test classes share the same mock server setup:"
 msgstr "`CustomKubernetesMockServerTestResource.java` を作成して、 `@QuarkusTest` を有効にしたすべてのテストクラスが同じモックサーバー設定を共有できるようにすることができます。"
 
@@ -294,7 +283,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:159
-#, fuzzy
 msgid "and use this in your other test classes as follows:"
 msgstr "で、これを次のように他のテストクラスで使用します。"
 
@@ -317,19 +305,17 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:172
-#, fuzzy
 msgid "Furthermore, to get a mock server that replies with empty lists by default (instead of getting 404 responses from the Kubernetes API), you can use the `EmptyDefaultKubernetesMockServerTestResource.class` instead of `KubernetesMockServerTestResource.class`."
-msgstr "さらに、デフォルトで空のリストで応答するモックサーバーを取得するには(Kubernetes APIから404の応答を取得するのではなく)、 `KubernetesMockServerTestResource.class` の代わりに `EmptyDefaultKubernetesMockServerTestResource.class` ."
+msgstr "さらに、デフォルトで空のリストで応答するモックサーバーを取得するには(Kubernetes APIから404の応答を取得するのではなく)、 `KubernetesMockServerTestResource.class` の代わりに `EmptyDefaultKubernetesMockServerTestResource.class` を使用します。"
 
 #. type: Title ==
 #: upstream/_guides/kubernetes-client.adoc:174
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Note on implementing the Watcher interface"
-msgstr "ウォッチャーインターフェイスの実装についての注意点"
+msgstr "Watcherインターフェイスの実装についての注意点"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:179
-#, fuzzy
 msgid "Due to the restrictions imposed by GraalVM, extra care needs to be taken when implementing an `io.fabric8.kubernetes.client.Watcher` if the application is intended to work in native mode.  Essentially every `Watcher` implementation needs to specify the Kubernetes model class that it handles via the ``Watcher``'s generic type at class definition time.  To better understand this, suppose we want to watch for changes to Kubernetes `Pod` resources. There are a couple ways to write such a `Watcher` that are guaranteed to work in native:"
 msgstr "GraalVMによって課せられた制限のため、アプリケーションがネイティブモードで動作することを意図している場合、 `io.fabric8.kubernetes.client.Watcher` を実装する際には特に注意が必要です。基本的にすべての `Watcher` の実装は、クラス定義時に `Watcher` の汎用型を介して扱う Kubernetes モデルクラスを指定する必要があります。これをよりよく理解するために、Kubernetes `Pod` リソースの変更を監視したいとします。このような `Watcher` を書くには、ネイティブでの動作が保証されている方法がいくつかあります。"
 
@@ -357,9 +343,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:196
-#, fuzzy
 msgid "or"
-msgstr "或いは"
+msgstr "あるいは"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:204
@@ -399,7 +384,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:218
-#, fuzzy
 msgid "Note that defining the generic type via a class hierarchy similar to the following example will also work correctly:"
 msgstr "以下の例のようにクラス階層を介して汎用型を定義すると、正しく動作することに注意してください。"
 
@@ -425,9 +409,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:237
-#, fuzzy
 msgid "The following example will **not** work in native mode because the generic type of watcher cannot be determined by looking at the class and method definitions thus making Quarkus unable to properly determine the Kubernetes model class for which reflection registration is needed:"
-msgstr "以下の例では、クラスやメソッドの定義を見てウォッチャーの一般的なタイプを判断できないため、Quarkusは反射登録が必要なKubernetesモデルクラスを適切に判断できないため、ネイティブモードでは動作し *ません* 。"
+msgstr "以下の例では、クラスやメソッドの定義を見てウォッチャーのGeneric型を判断できないため、Quarkusはリフレクション登録が必要なKubernetesモデルクラスを適切に判断できないため、ネイティブモードでは動作し *ません* 。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:245
@@ -448,13 +431,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kubernetes-client.adoc:256
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Access to the Kubernetes API"
 msgstr "Kubernetes APIへのアクセス"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:260
-#, fuzzy
 msgid "In many cases in order to access the Kubernetes API server a `ServiceAccount`, `Role` and `RoleBinding` will be necessary.  An example that allows listing all pods could look something like this:"
 msgstr "多くの場合、Kubernetes API サーバーにアクセスするには `ServiceAccount` 、 `Role` 、 `RoleBinding` が必要になります。すべてのポッドを一覧表示する例は以下のようになります。"
 
@@ -513,33 +495,29 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:297
-#, fuzzy
 msgid "Replace `<applicationName>` and `<namespace>` with your values.  Have a look at https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/[Configure Service Accounts for Pods] to get further information."
-msgstr "`<applicationName>` と `<namespace>` を値に置き換えてください。 link:https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/[ポッドのサービスアカウントの設定] を参照して、詳細な情報を入手してください。"
+msgstr "`<applicationName>` と `<namespace>` を値に置き換えてください。 link:https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/[PodのService Accountの設定] を参照して、詳細な情報を入手してください。"
 
 #. type: Title ==
 #: upstream/_guides/kubernetes-client.adoc:298
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "OpenShift Client"
 msgstr "OpenShiftクライアント"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:303
-#, fuzzy
 msgid "If the targeted Kubernetes cluster is an OpenShift cluster, it is possible to access it through the `openshift-client` extension, in a similar way. This leverages the dedicated fabric8 openshift client, and provides access to `OpenShift` proprietary objects (e.g. `Route`, `ProjectRequest`, `BuildConfig` ...)"
 msgstr "対象となるKubernetesクラスターがOpenShiftクラスターであれば、同様の方法で、 `openshift-client` エクステンションを利用してアクセスすることが可能です。これは専用の fabric8 openshift クライアントを利用し、 `OpenShift` の専有オブジェクト(例: `Route` , `ProjectRequest` , `BuildConfig` ...)へのアクセスを提供します。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:306
-#, fuzzy
 msgid "Note that the configuration properties are shared with the `kubernetes-client` extension. In particular they have the same `quarkus.kubernetes-client` prefix."
 msgstr "設定プロパティーは `kubernetes-client` エクステンションと共有されていることに注意してください。特に、これらは同じ `quarkus.kubernetes-client` プレフィックスを持っています。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:308
-#, fuzzy
 msgid "Add the extension with:"
-msgstr "でエクステンションを追加します。"
+msgstr "以下のコマンドでエクステンションを追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:312
@@ -549,13 +527,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:315
-#, fuzzy
 msgid "Note that `openshift-client` extension has a dependency on the `kubernetes-client` extension."
 msgstr "`openshift-client` エクステンションは `kubernetes-client` エクステンションに依存していることに注意してください。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:317
-#, fuzzy
 msgid "To use the client, inject an `OpenShiftClient` instead of the `KubernetesClient`:"
 msgstr "クライアントを使用するには、 `KubernetesClient` の代わりに `OpenShiftClient` を注入します。"
 
@@ -569,9 +545,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:325
-#, fuzzy
 msgid "If you need to override the default `OpenShiftClient`, provide a producer such as:"
-msgstr "デフォルトの `OpenShiftClient` を上書きする必要がある場合は、次のようなプロデューサーを指定してください。"
+msgstr "デフォルトの `OpenShiftClient` を上書きする必要がある場合は、次のようなプロデューサーを提供してください。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:330
@@ -595,7 +570,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:340
-#, fuzzy
 msgid "Mock support is also provided in a similar fashion:"
 msgstr "モックサポートも同様の方法で提供されています。"
 
@@ -619,7 +593,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:353
-#, fuzzy
 msgid "To use this feature, you have to add a dependency on `quarkus-test-openshift-client`:"
 msgstr "この機能を使用するには、 `quarkus-test-openshift-client` に依存関係を追加する必要があります。"
 
