--- a/l10n/po/ja_JP/_guides/kubernetes-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/kubernetes-client.adoc.po
@@ -106,7 +106,7 @@ msgstr "また、このエクステンションでは、アプリケーション
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:58
 msgid "An example of this can be seen in the following snippet:"
-msgstr "この例は、次のスニペットに見ることができます。"
+msgstr "この例は、次のスニペットの通りです:"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:63
@@ -182,7 +182,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:100
 msgid "We could write a test for this endpoint very easily like so:"
-msgstr "このエンドポイントのテストはこんな感じで簡単に書けます。"
+msgstr "このエンドポイントのテストは次のように簡単に書けます。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:107
@@ -284,7 +284,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:159
 msgid "and use this in your other test classes as follows:"
-msgstr "で、これを次のように他のテストクラスで使用します。"
+msgstr "そして、これを次のように他のテストクラスで使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:164
@@ -317,7 +317,7 @@ msgstr "Watcher インターフェイスの実装についての注意点"
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:179
 msgid "Due to the restrictions imposed by GraalVM, extra care needs to be taken when implementing an `io.fabric8.kubernetes.client.Watcher` if the application is intended to work in native mode.  Essentially every `Watcher` implementation needs to specify the Kubernetes model class that it handles via the ``Watcher``'s generic type at class definition time.  To better understand this, suppose we want to watch for changes to Kubernetes `Pod` resources. There are a couple ways to write such a `Watcher` that are guaranteed to work in native:"
-msgstr "GraalVMによって課せられた制限のため、アプリケーションがネイティブモードで動作することを意図している場合、 `io.fabric8.kubernetes.client.Watcher` を実装する際には特に注意が必要です。基本的にすべての `Watcher` の実装は、クラス定義時に `Watcher` の汎用型を介して扱う Kubernetes モデルクラスを指定する必要があります。これをよりよく理解するために、Kubernetes `Pod` リソースの変更を監視したいとします。このような `Watcher` を書くには、ネイティブでの動作が保証されている方法がいくつかあります。"
+msgstr "GraalVMによって課せられた制限のため、アプリケーションがネイティブモードで動作することを意図している場合、 `io.fabric8.kubernetes.client.Watcher` を実装する際には特に注意が必要です。基本的にすべての `Watcher` の実装は、クラス定義時に `Watcher` のジェネリック型を介して扱う Kubernetes モデルクラスを指定する必要があります。これをよりよく理解するために、例えばKubernetes `Pod` リソースの変更を監視したいとします。このような `Watcher` を書くには、ネイティブでの動作が保証されている方法がいくつかあります。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:187
@@ -344,7 +344,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:196
 msgid "or"
-msgstr "あるいは"
+msgstr "または"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:204
@@ -385,7 +385,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:218
 msgid "Note that defining the generic type via a class hierarchy similar to the following example will also work correctly:"
-msgstr "以下の例のようにクラス階層を介して汎用型を定義すると、正しく動作することに注意してください。"
+msgstr "以下の例のようにクラス階層を介してジェネリック型を定義した場合も、正しく動作することに注目してください。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:223
@@ -410,7 +410,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:237
 msgid "The following example will **not** work in native mode because the generic type of watcher cannot be determined by looking at the class and method definitions thus making Quarkus unable to properly determine the Kubernetes model class for which reflection registration is needed:"
-msgstr "以下の例では、クラスやメソッドの定義を見てウォッチャーのGeneric型を判断できないため、Quarkusはリフレクション登録が必要なKubernetesモデルクラスを適切に判断できないため、ネイティブモードでは動作し *ません* 。"
+msgstr "以下の例では、クラスやメソッドの定義を見てウォッチャーのジェネリック型を判断できないため、Quarkusはリフレクション登録が必要なKubernetesモデルクラスを適切に判断できないため、ネイティブモードでは動作し *ません* 。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:245
@@ -496,7 +496,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:297
 msgid "Replace `<applicationName>` and `<namespace>` with your values.  Have a look at https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/[Configure Service Accounts for Pods] to get further information."
-msgstr "`<applicationName>` と `<namespace>` を値に置き換えてください。 link:https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/[PodのService Accountの設定] を参照して、詳細な情報を入手してください。"
+msgstr "`<applicationName>` と `<namespace>` は値に置き換えてください。 link:https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/[PodのService Accountの設定] を参照して、詳細な情報を入手してください。"
 
 #. type: Title ==
 #: upstream/_guides/kubernetes-client.adoc:298
