Translate get-started.md.po

--- a/l10n/po/ja_JP/get-started.md.po
+++ b/l10n/po/ja_JP/get-started.md.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-02 14:41+0900\n"
-"PO-Revision-Date: 2021-03-13 13:31+0900\n"
+"PO-Revision-Date: 2021-03-13 14:16+0900\n"
 "Language: ja_JP\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/get-started.md:1
 #, no-wrap
 msgid "get-started"
-msgstr "はじめに"
+msgstr "get-started"
 
 #. type: YAML Front Matter: permalink
 #: upstream/get-started.md:1
@@ -311,52 +311,49 @@ msgstr ""
 #: upstream/get-started.md:89
 #, no-wrap
 msgid "how to use Maven as a build tool\n"
-msgstr ""
+msgstr "Mavenをビルドツールとして使用する方法\n"
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
 #, no-wrap
 msgid "how to use Gradle as a build tool\n"
-msgstr ""
+msgstr "Gradleをビルドツールとして使用する方法\n"
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
-#, fuzzy, no-wrap
-#| msgid "how to use the native CLI for your toolchain (coming soon)"
+#, no-wrap
 msgid "how to use the native CLI for your toolchain (coming soon)\n"
-msgstr "ツールチェインにネイティブCLIを使用する方法（近日公開）"
+msgstr "ツールチェインにネイティブCLIを使用する方法（近日公開）\n"
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
 #, no-wrap
 msgid "how to create and scaffold a new project\n"
-msgstr ""
+msgstr "新しいプロジェクトをスキャフォールド (骨組を作成) する方法\n"
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
 #, no-wrap
 msgid "how to deal with extensions\n"
-msgstr ""
+msgstr "エクステンションの扱い方\n"
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
 #, no-wrap
 msgid "how to enable live reload\n"
-msgstr ""
+msgstr "ライブリロードの有効化\n"
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
-#, fuzzy, no-wrap
-#| msgid "how to develop your application in your IDE"
+#, no-wrap
 msgid "how to develop your application in your IDE\n"
-msgstr "IDEでアプリケーションを開発する方法"
+msgstr "IDEでアプリケーションを開発する方法\n"
 
 #. type: Bullet: '* '
 #: upstream/get-started.md:89
-#, fuzzy, no-wrap
-#| msgid "how to develop your application in your IDE"
+#, no-wrap
 msgid "how to compile your application natively\n"
-msgstr "IDEでアプリケーションを開発する方法"
+msgstr "IDEでアプリケーションをコンパイルする方法\n"
 
 #. type: Plain text
 #: upstream/get-started.md:92
