--- a/l10n/po/ja_JP/_guides/ide-configuration.adoc.po
+++ b/l10n/po/ja_JP/_guides/ide-configuration.adoc.po
@@ -31,7 +31,7 @@ msgstr "新規プロジェクトの作成"
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:9
 msgid "Remember, you need to configure Maven as indicated in the link:maven-config.html[Maven configuration page].  Then, you can scaffold a new project with:"
-msgstr "link:maven-config.html[Mavenの設定ページ] に示されているように、Mavenを設定する必要があることを思い出して下さい。その後、以下のように新しいプロジェクトをスキャフォールド (枠組みの生成) 出来ます:"
+msgstr "link:maven-config.html[Mavenの設定ページ] に示されているように、Mavenを設定する必要があることを思い出して下さい。その後、以下のように新しいプロジェクトをスキャフォールド (骨組の生成) 出来ます:"
 
 #. type: delimited block -
 #: upstream/_guides/ide-configuration.adoc:17
