Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/all-builditems.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/all-builditems.adoc.po
@@ -29,6 +29,8 @@ msgid ""
 "layout: guides-configuration-reference\n"
 "---\n"
 msgstr ""
+"layout: guides-configuration-reference\n"
+"---\n"
 
 #. type: Title =
 #: upstream/_versions/1.11/guides/all-builditems.adoc:11
