--- a/l10n/po/ja_JP/_guides/amazon-credentials.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-credentials.adoc.po
@@ -3,45 +3,40 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:07+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-13 20:49+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_guides/amazon-credentials.adoc:2
-#, fuzzy
 msgid "Java System Properties - `aws.accessKeyId` and `aws.secretAccessKey`"
-msgstr "Javaシステムのプロパティー - `aws.accessKeyId` と `aws.secretAccessKey`"
+msgstr "Javaシステムプロパティー - `aws.accessKeyId` と `aws.secretAccessKey`"
 
 #. type: Plain text
 #: upstream/_guides/amazon-credentials.adoc:3
-#, fuzzy
 msgid "Environment Variables - `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`"
 msgstr "環境変数 - `AWS_ACCESS_KEY_ID` と `AWS_SECRET_ACCESS_KEY`"
 
 #. type: Plain text
 #: upstream/_guides/amazon-credentials.adoc:4
-#, fuzzy
 msgid "Credential profiles file at the default location (`~/.aws/credentials`) shared by all AWS SDKs and the AWS CLI"
-msgstr "Credential profiles file at default location ( `~/.aws/credentials` ) at all AWS SDKs and AWS CLI shared by all AWS SDKs"
+msgstr "すべての AWS SDK および AWS CLI で共有される、デフォルトの場所( `~/.aws/credentials` )にある資格情報プロファイルのファイル"
 
 #. type: Plain text
 #: upstream/_guides/amazon-credentials.adoc:5
-#, fuzzy
 msgid "Credentials delivered through the Amazon ECS if the `AWS_CONTAINER_CREDENTIALS_RELATIVE_URI` environment variable is set and the security manager has permission to access the variable,"
-msgstr "`AWS_CONTAINER_CREDENTIALS_RELATIVE_URI` 環境変数が設定されていて、セキュリティーマネージャーがその変数にアクセスする権限を持っている場合、Amazon ECS を通して配信されるクレデンシャル。"
+msgstr "`AWS_CONTAINER_CREDENTIALS_RELATIVE_URI` 環境変数が設定されていて、セキュリティーマネージャーがその変数にアクセスする権限を持っている場合に、Amazon ECS を通して配信されるクレデンシャル"
 
 #. type: Plain text
 #: upstream/_guides/amazon-credentials.adoc:5
-#, fuzzy
 msgid "Instance profile credentials delivered through the Amazon EC2 metadata service"
 msgstr "Amazon EC2メタデータサービスを通じて配信されるインスタンスプロファイルの資格情報"
