--- a/l10n/po/ja_JP/_versions/1.11/guides/funqy-azure-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/funqy-azure-functions-http.adoc.po
@@ -28,14 +28,14 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/funqy-azure-functions-http.adoc:13
 msgid "You can use link:funqy-http[Funqy HTTP] on Azure Functions.  This allows you to invoke on multiple Funqy functions using HTTP deployed as one Azure Function."
-msgstr ""
+msgstr "Azure Functions 上で link:funqy-http[Funqy HTTP] を使用することができます。これにより、1つの Azure Functions としてデプロイされた複数の Funqy function をHTTPを使用して呼び出すことができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/funqy-azure-functions-http.adoc:19
 msgid "The Funqy HTTP + Azure Functions binding is not a replacement for REST over HTTP.  Because Funqy needs to be portable cross a lot of different protocols and function providers its HTTP binding is very minimalistic and you will lose REST features like linking and the ability to leverage HTTP features like cache-control and conditional GETs.  You may want to consider using Quarkus's JAX-RS, Spring MVC, or Vert.x Web Reactive Route link:azure-functions-http[support] instead.  They also work with Quarkus and Azure Functions."
-msgstr ""
+msgstr "Funqy HTTP + Azure FunctionsバインディングはHTTP上のRESTの代わりではありません。Funqyは多くの異なるプロトコルや関数プロバイダを横断してポータブルである必要があるため、HTTPバインディングは非常にミニマムであり、リンクのようなREST機能やキャッシュコントロールや条件付きGETのようなHTTP機能を活用する機能を失うことになります。代わりに、QuarkusのJAX-RS、Spring MVC、またはVert.x Web Reactive Routeの link:azure-functions-http[サポート] を使用することを検討するとよいでしょう。また、QuarkusやAzure Functionsとも連携しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/funqy-azure-functions-http.adoc:25
 msgid "Follow the link:azure-functions-http[Azure Functions Http Guide].  It walks through using a variety of HTTP frameworks on Azure Functions.  Including Funqy."
-msgstr ""
+msgstr "link:azure-functions-http[Azure Functions Http Guide] に従ってください。これは、Azure Functions上で、Funqyを含む様々なHTTPフレームワークを使用する方法を説明しています。"
