Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/amazon-lambda-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/amazon-lambda-http.adoc.po
@@ -97,7 +97,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/amazon-lambda-http.adoc:40
 #, no-wrap
 msgid "Creating the Maven Deployment Project"
-msgstr ""
+msgstr "デプロイ用のMavenプロジェクトを作成する"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-lambda-http.adoc:43
