--- a/l10n/po/ja_JP/_versions/1.7/guides/amazon-lambda.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/amazon-lambda.adoc.po
@@ -107,7 +107,7 @@ msgstr "AWSのすべてのツールをインストールすることは、おそ
 #: upstream/_versions/1.7/guides/amazon-lambda.adoc:41
 #, no-wrap
 msgid "Creating the Maven Deployment Project"
-msgstr ""
+msgstr "デプロイ用のMavenプロジェクトを作成する"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/amazon-lambda.adoc:44
