--- a/l10n/po/ja_JP/_versions/1.11/guides/gcp-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/gcp-functions-http.adoc.po
@@ -38,7 +38,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:17
 msgid "As the Google Cloud Function Java engine is a new Beta feature of Google Cloud, this extension is flagged as experimental."
-msgstr ""
+msgstr "Google Cloud FunctionsのJavaへの対応は現在ベータ版であるため、このエクステンションは実験的なものとなります"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:20
@@ -89,7 +89,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:37
 msgid "If you don't want to follow all these steps, you can go right to the completed example."
-msgstr ""
+msgstr "これらの手順を順にすべて実行しない場合、完成したサンプルを以下で確認できます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:39
@@ -105,7 +105,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:42
 #, no-wrap
 msgid "Creating the Maven Deployment Project"
-msgstr ""
+msgstr "デプロイ用のMavenプロジェクトを作成する"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:46
@@ -144,7 +144,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:67
 msgid "At the time of this writing, Cloud Functions are still in beta so make sure to install the `beta` command group."
-msgstr ""
+msgstr "本ガイドの執筆時点では、Cloud Functionsはまだベータ版であるため、 `beta` コマンドグループをインストールする必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:71
@@ -326,7 +326,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:163
 #, no-wrap
 msgid "Build and Deploy to Google Cloud"
-msgstr ""
+msgstr "アプリケーションのビルドとGoogle Cloudへのデプロイ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:166
@@ -360,7 +360,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:187
 msgid "The first time you launch this command, you can have the following error message:"
-msgstr ""
+msgstr "このコマンドを初めて起動したときには、以下のようなエラーメッセージが表示されることがあります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:190
@@ -371,12 +371,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:192
 msgid "This means that Cloud Build is not activated yet. To overcome this error, open the URL shown in the error, follow the instructions and then wait a few minutes before retrying the command."
-msgstr ""
+msgstr "これは、Cloud Buildがまだ有効化されていないことを意味します。このエラーを解決するには、エラーに表示されているURLを開き指示に従った後、数分待ってからコマンドを再試行してください。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:196
 msgid "This command will give you as output a `httpsTrigger.url` that points to your function."
-msgstr ""
+msgstr "このコマンドは、作成したCloud Functions 関数をトリガーするための `httpsTrigger.url` を出力します。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:198
@@ -407,17 +407,17 @@ msgstr ""
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:204
 #, no-wrap
 msgid "Testing locally"
-msgstr ""
+msgstr "ローカルでのテスト"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:207
 msgid "The easiest way to locally test your function is using the Cloud Function invoker JAR."
-msgstr ""
+msgstr "関数をローカルでテストする最も簡単な方法は、Cloud Function invoker JAR を使用することです。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:209
 msgid "You can download it via Maven using the following command:"
-msgstr ""
+msgstr "以下のコマンドでMaven経由でダウンロードできます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:215
@@ -431,7 +431,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:218
 msgid "Before using the invoker, you first need to build your function via `mvn package`."
-msgstr ""
+msgstr "invokerを使用する前に、`mvn package` で関数をビルドする必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:220
@@ -450,12 +450,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:229
 msgid "The `--classpath` parameter needs to be set to the previously packaged JAR that contains your function class and all Quarkus related classes."
-msgstr ""
+msgstr "`--classpath` パラメーターには、関数クラスとQuarkus関連のすべてのクラスを含む、先の手順でパッケージ化されたJARを指定する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:231
 msgid "Your endpoints will be available on http://localhost:8080."
-msgstr ""
+msgstr "エンドポイントは http://localhost:8080 で利用できます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/gcp-functions-http.adoc:232
