--- a/l10n/po/ja_JP/_versions/1.7/guides/funqy-gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/funqy-gcp-functions.adoc.po
@@ -33,7 +33,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:14
 msgid "As the Google Cloud Function Java engine is a new Beta feature of Google Cloud, this extension is flagged as experimental."
-msgstr ""
+msgstr "Google Cloud FunctionsのJavaへの対応は現在ベータ版であるため、このエクステンションは実験的なものとなります"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:17
@@ -91,7 +91,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:37
 msgid "At the time of this writing, Cloud Functions are still in beta so make sure to install the `beta` command group."
-msgstr ""
+msgstr "本ガイドの執筆時点では、Cloud Functionsはまだベータ版であるため、 `beta` コマンドグループをインストールする必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:41
@@ -119,7 +119,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:49
 #, no-wrap
 msgid "Creating the Maven Deployment Project"
-msgstr ""
+msgstr "デプロイ用のMavenプロジェクトを作成する"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:53
@@ -141,7 +141,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:65
 msgid "Now, let's remove what's not needed inside the generated application:"
-msgstr ""
+msgstr "次に、生成されたアプリケーションから不要なものを削除します"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:67
@@ -151,17 +151,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:68
 msgid "Remove the generated `org.acme.quickstart.GreetingResource` class."
-msgstr ""
+msgstr "生成された `org.acme.quickstart.GreetingResource` クラスを削除します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:69
 msgid "Remove the `index.html` from `resources/META-INF/resources` or it will be picked up instead of your Function."
-msgstr ""
+msgstr "`resources/META-INF/resources` から `index.html` を削除します。このファイルを削除しない場合Cloud Functions の関数として扱われてしまいます"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:70
 msgid "Remove the existing tests."
-msgstr ""
+msgstr "既存のテストを削除します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:71
@@ -292,7 +292,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:137
 msgid "Injection works inside your function."
-msgstr ""
+msgstr "インジェクションはCloud Function関数クラスの中で動作します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:139
@@ -324,7 +324,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:152
 #, no-wrap
 msgid "Build and Deploy to Google Cloud"
-msgstr ""
+msgstr "アプリケーションのビルドとGoogle Cloudへのデプロイ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:156
@@ -401,7 +401,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:198
 msgid "Before deploying your function, you need to create a bucket."
-msgstr ""
+msgstr "関数をデプロイする前に、バケットを作成する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:202
@@ -449,17 +449,17 @@ msgstr ""
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:231
 #, no-wrap
 msgid "Testing locally"
-msgstr ""
+msgstr "ローカルでのテスト"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:234
 msgid "The easiest way to locally test your function is using the Cloud Function invoker JAR."
-msgstr ""
+msgstr "関数をローカルでテストする最も簡単な方法は、Cloud Function invoker JAR を使用することです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:236
 msgid "You can download it via Maven using the following command:"
-msgstr ""
+msgstr "以下のコマンドでMaven経由でダウンロードできます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:242
@@ -473,7 +473,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:245
 msgid "Before using the invoker, you first need to build your function via `mvn package`."
-msgstr ""
+msgstr "invokerを使用する前に、`mvn package` で関数をビルドする必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:247
@@ -500,13 +500,13 @@ msgstr ""
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:260
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:282
 msgid "The `--classpath` parameter needs to be set to the previously packaged JAR that contains your function class and all Quarkus related classes."
-msgstr ""
+msgstr "`--classpath` パラメーターには、関数クラスとQuarkus関連のすべてのクラスを含む、先の手順でパッケージ化されたJARを指定する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:262
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:284
 msgid "Then you can call your background function via an HTTP call with a payload containing the event:"
-msgstr ""
+msgstr "起動後、HTTP 呼び出しにイベントを含むペイロードを付与することでバックグラウンド関数を呼び出すことができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/funqy-gcp-functions.adoc:266
