Add machine translation

--- a/l10n/po/ja_JP/_posts/2021-01-20-quarkus-1-11-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-01-20-quarkus-1-11-0-final-released.adoc.po
@@ -306,8 +306,9 @@ msgstr "このルートパスは、 `quarkus.http.non-application-root-path`."
 
 #. type: Plain text
 #: upstream/_posts/2021-01-20-quarkus-1-11-0-final-released.adoc:104
+#, fuzzy
 msgid "Edit: We discovered some issues with the `/q` namespace introduced in this release that are described link:/blog/path-resolution-in-quarkus/[here]. These issues were resolved in `1.11.5.Final`."
-msgstr ""
+msgstr "編集：本リリースで導入された `/q` の名前空間について、いくつかの問題が見つかりましたので、 link:/blog/path-resolution-in-quarkus/[ここで]説明します。これらの問題は `1.11.5.Final` で解決されました。"
 
 #. type: Title ===
 #: upstream/_posts/2021-01-20-quarkus-1-11-0-final-released.adoc:105
