--- a/l10n/po/ja_JP/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc.po
@@ -265,8 +265,9 @@ msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.12.0.CR1[1.12.0
 
 #. type: Plain text
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:111
+#, fuzzy
 msgid "Edit: We discovered some issues with the `/q` namespace introduced in this release that are described link:/blog/path-resolution-in-quarkus/[here]. These issues were resolved in `1.12.1.Final`."
-msgstr ""
+msgstr "編集：本リリースで導入された `/q` の名前空間について、いくつかの問題が見つかりましたので、 link:/blog/path-resolution-in-quarkus/[ここで]説明します。これらの問題は `1.12.1.Final` で解決されました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-23-quarkus-1-12-0-final-released.adoc:112
