--- a/l10n/po/ja_JP/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc.po
@@ -65,8 +65,9 @@ msgstr "変更点"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:19
+#, fuzzy
 msgid "link:/blog/path-resolution-in-quarkus/[Path resolution] for configurable endpoints changed in this release."
-msgstr ""
+msgstr "このリリースでは、設定可能なエンドポイントの link:/blog/path-resolution-in-quarkus/[パス解決]が変更されました。"
 
 #. type: Title ===
 #: upstream/_posts/2021-03-03-quarkus-1-12-1-final-released.adoc:20
